# smore_bot_ws

./: .gitignore  README.md  install_ros2_jazzy.sh  start_smore_bot.sh
src/smore_bot_controller/: basic_controller.py  package.xml  setup.cfg  setup.py
src/smore_bot_core/: package.xml  setup.cfg  setup.py
src/smore_bot_core/smore_bot_core/: state_manager.py
src/smore_bot_description/: CMakeLists.txt  package.xml
src/smore_bot_description/config/: controllers.yaml  display.rviz
src/smore_bot_description/launch/: display.launch.py  gazebo.launch.py  integrated_sim.launch.py
src/smore_bot_description/urdf/: materials.xacro  smore_bot.gazebo  test.urdf.xacro
src/smore_bot_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
src/smore_bot_moveit_config/config/: joint_limits.yaml  smore_bot.srdf
src/smore_bot_moveit_config/launch/: demo.launch.py  move_group.launch.py  moveit_rviz.launch.py  rsp.launch.py  setup_assistant.launch.py  spawn_controllers.launch.py  static_virtual_joint_tfs.launch.py  warehouse_db.launch.py
src/smore_bot_py/: package.xml  setup.cfg  setup.py
src/smore_bot_web/: package.xml  setup.cfg  setup.py
src/smore_bot_web/smore_bot_web/: web_server.py
src/smore_bot_web/smore_bot_web/web/: index.html  worker.js
